--- a/assets/css/global/resset.css
+++ b/assets/css/global/resset.css
@@ -3,3 +3,18 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+}
+
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+}
