--- a/assets/css/root/root.css
+++ b/assets/css/root/root.css
@@ -1,8 +1,12 @@
 :root{
    --bg-color1:#031634;
    --color1: #fff;
+   --color2: #222;
 }
 
 .cor1{
    color: var(--color1);
+}
+.cor2{
+   color: var(--color2);
 }
