--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -1,4 +1,19 @@
-
-.superinfo--bg{
-   background-color: var(--bg-color1);
+.superinfo--bg {
+  background-color: var(--bg-color1);
+  background-color: var(--bg1);
+}
+.superinfo {
+  max-width: 950px;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+.superinfo p,
+.superinfo a{
+   margin: 0 10px 10px 10px;
+}
+.superinfo a {
+  color: var(--cor1);
+}
+.menu--bg {
+  background-color: var(--bg2);
 }
