Menu mobile - JavaScript

--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -3,17 +3,153 @@
   background-color: var(--bg1);
 }
 .superinfo {
-  max-width: 950px;
+  max-width: var(--max-width);
   margin: 0 auto;
-  padding-top: 10px;
+  padding-top: var(--padding1);
 }
 .superinfo p,
-.superinfo a{
-   margin: 0 10px 10px 10px;
+.superinfo a {
+  margin: 0 var(--padding1) var(--padding1) var(--padding1);
 }
 .superinfo a {
   color: var(--cor1);
 }
+
 .menu--bg {
   background-color: var(--bg2);
+}
+.menu {
+  padding: 15px 0;
+  height: 70px;
+}
+.menu a {
+  color: var(--cor1);
+}
+
+.logo a {
+  font-size: 2.25em;
+  font-weight: bold;
+  margin: 0 var(--padding1);
+}
+
+.menu-nav ul {
+  justify-content: center;
+  gap: 10px;
+}
+.btnMobile {
+  display: none;
+}
+.menu-nav a {
+  font-size: 1.25em;
+  display: block;
+  padding: var(--padding1) 20px;
+}
+.menu-nav a::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 2px;
+  margin-top: 1px;
+  transition: 0.5s;
+  background-color: var(--cor1);
+}
+.menu-nav a:hover::after {
+  width: 100%;
+}
+@media (max-width: 630px) {
+  .menu {
+    padding: 10px;
+    position: relative;
+  }
+  .menu-links {
+    display: none;
+    display: block;
+    position: absolute;
+    background-color: var(--bg2);
+    left: 0;
+    top: 69px;
+    width: 100%;
+    height: 0%;
+    visibility: hidden;
+    overflow-y: hidden;
+    transition: 0.5s ease;
+    z-index: 5;
+  }
+  .menu-nav.active .menu-links {
+    height: 100%;
+    height: calc(100vh - 70px);
+    visibility: visible;
+    overflow-y: auto;
+  }
+  .btnMobile {
+    display: flex;
+    padding: 0.6rem 1rem;
+    font-size: 1.2rem;
+    border: none;
+    background-color: transparent;
+    color: var(--cor1);
+    color: #567ebb;
+    cursor: pointer;
+    gap: 5px;
+    text-transform: uppercase;
+  }
+  .line {
+    border-top: 3px solid;
+    width: 30px;
+    display: block;
+    color: #567ebb;
+    z-index: 555;
+  }
+  .line::before,
+  .line::after {
+    content: "";
+    height: 3px;
+    width: 30px;
+    display: block;
+    background-color: currentColor;
+    margin-top: 5px;
+    transition: 0.5s;
+    position: relative;
+  }
+  .menu-nav.active .btnMobile {
+    color: var(--cor1);
+  }
+  .menu-nav.active .line {
+    border-top-color: transparent;
+  }
+  .menu-nav.active .line::before {
+    transform: rotate(135deg);
+    background-color: #dce0e6;
+  }
+  .menu-nav.active .line::after {
+    transform: rotate(-135deg);
+    top: -7px;
+    background-color: #dce0e6;
+  }
+  .menu-nav a::after {
+    content: "";
+    display: none;
+  }
+  .menu-nav a {
+    padding: 1rem 10px;
+    margin: 0 1rem;
+  }
+  .menu-nav a:hover {
+    background-color: #567ebb;
+  }
+}
+@media (max-width: 420px) {
+  .logo a {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  @media (max-width: 265px) {
+    .menu {
+      height: 10vh;
+      justify-content: center;
+    }
+    .menu-links {
+      top: 9vh;
+    }
+  }
 }
