--- a/assets/css/root/root.css
+++ b/assets/css/root/root.css
@@ -1,10 +1,14 @@
 :root {
   --cor1: #fff;
   --cor2: #222;
+  --cor3: #7c7c7c;
   --bg1: #1f1f20;
   --bg2: #2b4c7e;
   --max-width: 960px;
   --padding1: 0.25rem;
+  --padding2: 3.75rem;
+  --margin-auto: 0 auto;
+  --font-size-small: 1.25em
 }
 
 .cor1 {
