--- a/assets/css/root/root.css
+++ b/assets/css/root/root.css
@@ -8,7 +8,8 @@
   --padding1: 0.25rem;
   --padding2: 3.75rem;
   --margin-auto: 0 auto;
-  --font-size-small: 1.25em
+  --font-size-small: 1.25em;
+  --font-size-average: 3em;
 }
 
 .cor1 {
