--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,4 +4,5 @@
 @import"./global/header.css";
 @import"./global/footer.css";
 @import"./sections/introducao.css";
+@import"./sections/produtos.css";
 
