--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,6 @@
 @import"./global/footer.css";
 @import"./sections/introducao.css";
 @import"./sections/produtos.css";
+@import"./sections/precos.css";
+@import"./sections/qualidade.css";
 
