--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -42,7 +42,7 @@
 .menu-nav a {
   font-size: var(--font-size-small);
   display: block;
-  padding: var(--padding1) 20px;
+  padding: var(--padding1) var(--padding3);
 }
 .menu-nav a::after {
   content: "";
