--- a/assets/css/root/root.css
+++ b/assets/css/root/root.css
@@ -7,6 +7,7 @@
   --max-width: 960px;
   --padding1: 0.25rem;
   --padding2: 3.75rem;
+  --padding3: 20px;
   --margin-auto: 0 auto;
   --font-size-small: 1.25em;
   --font-size-average: 3em;
