--- a/assets/css/sections/produtos.css
+++ b/assets/css/sections/produtos.css
@@ -17,7 +17,7 @@
   font-size: var(--font-size-average);
   color: #a4a4a4;
   background-color: #f7f7f7;
-  padding: var(--padding2) 20px;
+  padding: var(--padding2) var(--padding3);
 }
 .purple {
   border-top: 8px solid #ae81ff;
