--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,4 +7,5 @@
 @import"./sections/produtos.css";
 @import"./sections/precos.css";
 @import"./sections/qualidade.css";
+@import"./sections/newsletter.css";
 
