--- a/assets/css/sections/newsletter.css
+++ b/assets/css/sections/newsletter.css
@@ -51,3 +51,20 @@
   border: 0;
   padding: 15px 10px;
 }
+.scrollBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 1.5rem;
+  height: 40px;
+  width: 40px;
+  background-color: var(--bg2);
+  cursor: pointer;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  margin: 20px;
+  z-index: 999;
+  display: none;
+}
